--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -202,4 +202,5 @@ p {
 @import "_blog-post-style";
 @import "_streaming-style";
 @import "_classes";
+@import "_dark-mode";
 @import "_media-queries";
