--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -3,7 +3,6 @@
 .card {
   padding: 2rem;
   min-width: 280px;
-  flex: 1;
   transition: 5s;
 
   background-color: var(--color-white);
@@ -18,6 +17,9 @@
   }
 }
 
+.flex {
+  flex: 1;
+}
 .link-list {
   display: flex;
   flex-direction: column;
