--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -197,6 +197,7 @@ p {
     margin-top: 0; 
   }
 }
+// PAGE COMPONENT SHEETS
 @import "_home-style";
 @import "_blog-style";
 @import "_blog-post-style";
