--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -387,20 +387,24 @@ p:first-child {
   background-color: var(--color-dark);
 }
 
-.blog-post {
+article.blog-post {
   padding: 2rem 3rem 2rem 2rem;
   background-color: var(--color-grey);
 }
 
-.blog-post h2 {
+article.blog-post div {
+  max-width: 43rem;
+}
+
+article.blog-post h2 {
   margin-bottom: 2rem;
 }
 
-.blog-post h5 {
+article.blog-post h5 {
   margin-bottom: 2rem;
 }
 
-.blog-post img {
+article.blog-post img {
   border: var(--border-size) solid var(--color-dark);
   margin: 1rem 0 0;
   -webkit-transform: translateX(-13rem);
@@ -408,12 +412,20 @@ p:first-child {
 }
 
 @media all and (max-width: 1023px) {
-  .blog-post img {
+  article.blog-post img {
     width: 100%;
     -webkit-transform: translateX(0px);
             transform: translateX(0px);
     border-width: .5rem;
   }
+}
+
+section.blog-post {
+  width: 100%;
+}
+
+.clean {
+  background: var(--color-yellow);
 }
 
 .streaming__banner {
@@ -428,41 +440,41 @@ p:first-child {
   gap: 1rem;
 }
 
-.streaming__banner aside {
+.streaming__banner section .banner {
   min-height: 13vh;
   background: url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left;
   background-size: cover;
   color: var(--color-grey);
 }
 
-.streaming__banner aside h1 {
+.streaming__banner section .banner h1 {
   color: var(--color-dark);
 }
 
-.streaming__banner aside ul {
+.streaming__banner section .banner ul {
   padding-left: 1.5rem;
 }
 
-.streaming__banner aside ul li {
+.streaming__banner section .banner ul li {
   list-style: disc;
   padding-left: .5rem;
 }
 
-.streaming__banner aside ol {
+.streaming__banner section .banner ol {
   padding-left: 1.5rem;
 }
 
-.streaming__banner aside ol li {
+.streaming__banner section .banner ol li {
   padding-left: .5rem;
   list-style-type: decimal;
 }
 
-.streaming__banner aside.how-to {
+.streaming__banner section .banner.how-to {
   background: var(--color-white);
   color: var(--color-dark);
 }
 
-.streaming__banner aside.how-to blockquote {
+.streaming__banner section .banner.how-to blockquote {
   padding: 2rem;
   background-color: #e1e1e1;
   -webkit-transition: 5s;
