--- a/src/components/ProgressBar/progress-bar.scss
+++ b/src/components/ProgressBar/progress-bar.scss
@@ -1,3 +1,4 @@
+@import '../../styles/sass-vars';
 :root {
   --progress-width: 0px;
 }
@@ -14,5 +15,10 @@
     width: var(--progress-width);
     background-color: var(--color-yellow);
     height: 1.05rem;
+  }
+}
+@media screen and (max-width: $phone) {
+  .progress-bar {
+    top: 6.1rem;
   }
 }
