--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,3 +1,4 @@
+@import './sass-vars';
 @media all and (max-width: 64rem) {
   
   .top {
@@ -15,7 +16,7 @@
   }
 }
 
-@media all and (max-width: 414px) {
+@media all and (max-width: $phone) {
   :root {
     --base-font-size: 1rem;
   }
