Sass variable sheet and scroll prog bar ztrugglez.

--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,5 +1,5 @@
 @import './sass-vars';
-@media all and (max-width: 64rem) {
+@media all and (max-width: $tablet) {
   
   .top {
     flex-direction: column;
