Fixed i-button on Streaming + class name maturation.

--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -220,7 +220,7 @@
     }
   }
 }
-.rumpa-1 {
+.user-panel__favs {
   position: relative;
   top: 0;
 
@@ -230,7 +230,7 @@
   }
 }
 
-.rumpa-2 {
+.user-panel__info {
   z-index: 1;
 
   position: relative;
