--- a/src/components/ProgressBar/progress-bar.scss
+++ b/src/components/ProgressBar/progress-bar.scss
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: $phone) {
+@media screen and (max-width: 414px) {
   .progress-bar {
     top: 6.1rem;
   }
