--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,5 +1,4 @@
-@import './sass-vars';
-@media all and (max-width: $tablet) {
+@media all and (max-width: 64rem) {
   
   .top {
     flex-direction: column;
@@ -16,7 +15,7 @@
   }
 }
 
-@media all and (max-width: $phone) {
+@media all and (max-width: 414px) {
   :root {
     --base-font-size: 1rem;
   }
