--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -1,53 +1,34 @@
 .streaming__banner {
-  // min-width: 30vw;
+  min-height: 13vh;
+  min-width: 38vw;
   max-width: 38vw;
   
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+
+  color: var(--color-grey);
+
+  h1 {
+    color: var(--color-dark);
+  }
+  ol {
+    padding-left: 1.5rem;
   
-  section .banner {
-    min-height: 13vh;
-
-    background: 
-    url('../../public/images/svg/blob-scene-haikei.svg')
-    no-repeat 
-    top 
-    left;
-    background-size: cover;
-
-    color: var(--color-grey);
-
-    h1 {
-      color: var(--color-dark);
+    li {
+      padding-left: .5rem;
+      list-style-type: decimal;
     }
+  }
+
+  &.how-to {
+    background: var(--color-white);
+    color: var(--color-dark);
+  
+    blockquote {
+      padding: 2rem;
+      background-color: rgb(225, 225, 225);
     
-    ul {
-      padding-left: 1.5rem;
-    
-      li {
-        list-style: disc;
-        padding-left: .5rem;
-      }
-    }
-    ol {
-      padding-left: 1.5rem;
-      
-      li {
-        padding-left: .5rem;
-        list-style-type: decimal; 
-      }
-    }
-
-    &.how-to {
-      background: var(--color-white);
-      color: var(--color-dark);
-      blockquote {
-        padding: 2rem;
-        background-color: rgb(225, 225, 225);
-        
-        transition: 5s;
-      }
+      transition: 5s;
     }
   }
 }
