--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -429,6 +429,8 @@ section.blog-post {
 }
 
 .streaming__banner {
+  min-height: 13vh;
+  min-width: 38vw;
   max-width: 38vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -437,44 +439,28 @@ section.blog-post {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 1rem;
-}
-
-.streaming__banner section .banner {
-  min-height: 13vh;
-  background: url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left;
-  background-size: cover;
   color: var(--color-grey);
 }
 
-.streaming__banner section .banner h1 {
+.streaming__banner h1 {
   color: var(--color-dark);
 }
 
-.streaming__banner section .banner ul {
+.streaming__banner ol {
   padding-left: 1.5rem;
 }
 
-.streaming__banner section .banner ul li {
-  list-style: disc;
-  padding-left: .5rem;
-}
-
-.streaming__banner section .banner ol {
-  padding-left: 1.5rem;
-}
-
-.streaming__banner section .banner ol li {
+.streaming__banner ol li {
   padding-left: .5rem;
   list-style-type: decimal;
 }
 
-.streaming__banner section .banner.how-to {
+.streaming__banner.how-to {
   background: var(--color-white);
   color: var(--color-dark);
 }
 
-.streaming__banner section .banner.how-to blockquote {
+.streaming__banner.how-to blockquote {
   padding: 2rem;
   background-color: #e1e1e1;
   -webkit-transition: 5s;
