--- a/src/components/Goals/goals.scss
+++ b/src/components/Goals/goals.scss
@@ -1,5 +1,5 @@
 .goals {
-  border-top: 1rem solid var(--color-dark);
+  // border-top: 1rem solid var(--color-dark);
   background-color: var(--color-dark);
   z-index: 2;
 
