Variables now working from separate file.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -1,7 +1,7 @@
 @import "_classes";
 @import "_dark-mode";
 @import "_media-queries";
-@import "_sass-vars";
+// @import "_sass-vars";
 
 // PAGES
 @import "../pages/Blog/_blog";
