--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,4 +1,4 @@
-@media all and (max-width: 64rem) {
+@media all and (max-width: $tablet) {
   
   .top {
     flex-direction: column;
@@ -15,7 +15,7 @@
   }
 }
 
-@media all and (max-width: 414px) {
+@media all and (max-width: $phone) {
   :root {
     --base-font-size: 1rem;
   }
