--- a/src/components/Goals/_goals.scss
+++ b/src/components/Goals/_goals.scss
@@ -9,7 +9,7 @@
     grid-template-columns: repeat(3, 1fr);
 
 
-    @media screen and (max-width: 64rem) {
+    @media screen and (max-width: $tablet) {
       & {
         grid-template-columns: 1fr;
       }
