--- a/src/pages/Blog/_blog.scss
+++ b/src/pages/Blog/_blog.scss
@@ -25,7 +25,7 @@
       filter: blur(0) opacity(1);
       transition: var(--speed-fast);
 
-      @media screen and (max-width: 64rem) {
+      @media screen and (max-width: $tablet) {
         transform: rotate(0deg);
       }
     }
