Styling docs trimmed.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,7 +21,7 @@ $reddd: red;
 
   --base-font-size: 1.25em;
   --type-scale: 1.125;
-  /* Major Second Scale */
+  /* ^ Major Second Scale */
 
   --h5: calc(var(--base-font-size));
   --h4: calc(var(--h5) * var(--type-scale));
