NVM page set up.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -6,6 +6,7 @@
 @import "../pages/Blog/_blog";
 @import "../pages/BlogPost/blog-post";
 @import "../pages/Home/_home";
+@import "../pages/Nvm/_nvm";
 @import "../pages/Streaming/_streaming";
 
 // COMPONENTS
