--- a/src/pages/BlogPost/Imagination/_imagination.scss
+++ b/src/pages/BlogPost/Imagination/_imagination.scss
@@ -7,6 +7,11 @@
   article {
     margin: 2rem 2rem;
     max-width: 40rem;
-    // min-width: 68vw;
+    
+    blockquote {
+      font-family: 'Times New Roman', Times, serif;
+      font-size: calc(var(--base-font-size) * 1.1);
+      font-style: italic;
+    }
   }
 }
