--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -415,6 +415,12 @@ section.blog-post {
   max-width: 40rem;
 }
 
+#imagination-main article blockquote {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: calc(var(--base-font-size) * 1.1);
+  font-style: italic;
+}
+
 .main-1 {
   width: 100vw;
   height: 100%;
