--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,7 +14,7 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 
 body {
   background-color: var(--color-dark);
-  min-width: 280px;
+  // min-width: 280px;
   width: 100vw;
   position: relative;
   overflow-x: hidden;
