Unique image added for Imagination post.

--- a/src/pages/BlogPost/Imagination/_imagination.scss
+++ b/src/pages/BlogPost/Imagination/_imagination.scss
@@ -26,8 +26,14 @@
     @include photo-default;
     height: 100vh;
 
-    background-image: url('../../public/images/michel2.jpg');
+    background-image: url('../../public/images/michel6.jpg');
     border-top: none;
     width: 100%;
+  }
+
+  @media all and (min-width: 100rem) {
+    aside {
+      background-image: url('../../public/images/michel6__rotated.jpg');
+    }
   }
 }
