Changed Imagination font-size.

--- a/src/pages/BlogPost/Imagination/_imagination.scss
+++ b/src/pages/BlogPost/Imagination/_imagination.scss
@@ -14,6 +14,10 @@
       font-size: calc(var(--base-font-size) * 1.1);
       font-style: italic;
     }
+
+    p {
+      font-size: var(--h5);
+    }
   }
 
   @media all and (max-width: $tablet) {
