Added photography page.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -8,6 +8,7 @@
 @import "../pages/Home/_home";
 @import "../pages/Nvm/_nvm";
 @import "../pages/Streaming/_streaming";
+@import "../pages/Photography/_photography";
 
 // COMPONENTS
 @import "../components/Footer/_footer";
