Photo gallery ande home fxed.

--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -85,8 +85,8 @@
 }
 
 .top__noborder {
-  display: flex;
-  gap: 1rem;
+  // display: flex;
+  // gap: 1rem;
 
   position: sticky;
   top: 8.5rem;
