--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -89,13 +89,6 @@
   background-image: url('../../public/images/michel.jpg');
   background-size: cover;
   background-position: center;
-
-  h2 {
-    color: var(--color-staticwhite);
-    text-align: left;
-
-    max-width: 30rem;
-  }
 }
 
 .photo-2 {
@@ -115,5 +108,12 @@
   @include photo-default;
 
   background-image: url('../../public/images/michel4.jpg');
+  background-position: center center;
+}
+
+.photo-5 {
+  @include photo-default;
+
+  background-image: url('../../public/images/vsc.jpg');
   background-position: center center;
 }
