--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,10 +1,18 @@
 @mixin photo-default {
   border-top: 1rem solid var(--color-dark);
   min-height: 89vh;
+  padding: 2rem;
 
   position: sticky;
   top: 6rem;
   z-index: 2;
 
   background-size: cover;
+
+  h2 {
+    color: var(--color-staticwhite);
+    text-align: left;
+
+    max-width: 30rem;
+  }
 }
